test/e2e/features/listenerset/testdata/invalid-listenerset-not-allowed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: invalid-ls-not-allowed
  namespace: curl
spec:
  parentRef:
    name: gw
    namespace: default
    kind: Gateway
    group: gateway.networking.k8s.io
  listeners:
  - name: http
    protocol: HTTP
    port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-ls-not-allowed-route
spec:
  parentRefs:
    - kind: ListenerSet
      group: gateway.networking.k8s.io
      name: invalid-ls-not-allowed
      namespace: curl
  hostnames:
    - "listenerset.com"
  rules:
    - backendRefs:
        - name: example-svc
          port: 8080
